<resources>
    <string name="app_name">e4rent</string>
    <string name="usernamelog">username</string>
    <string name="welcome_back">welcome back</string>
    <string name="passwordlogin">password</string>
    <string name="loginbutton">login</string>
    <string name="usernamelogin">username</string>
    <string name="forgot_password">forgot password</string>
    <string name="don_t_have_account_signup">Don\'t have account,SignUp</string>
    <string name="welcomeback">Welcome back</string>
    <string name="register_now">register Now</string>
    <string name="full_name">full name</string>
    <string name="usernamesign">username</string>
    <string name="email">email</string>
    <string name="passwordSign">password</string>
    <string name="phone_number">phone number</string>
    <string name="already_have_one">already have one</string>
    <string name="register">register</string>
    <string name="enter_password">enter Password</string>
    <string name="password">password</string>

        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="help_name">Help</string>
        <string name="feedback_name">feedback</string>


        <string name="nav_home">Home</string>
        <string name="nav_available">Available</string>
        <string name="nav_settings">Settings</string>
        <string name="nav_feedback">feedback</string>
        <string name="nav_support">Support</string>
        <string name="nav_more">More</string>
        <string name="nav_help">Help</string>
        <string name="nav_exit">Exit</string>

        <!--    navigating through rental fragments-->
        <string name="flat">Flat</string>
        <string name="House">House</string>
        <string name="mall">Mall</string>
        <string name="market">Market</string>
        <string name="arcade">Arcade</string>
        <string name="user_name">www.email.com</string>
        <string name="title_activity_nav_main">NavMainActivity</string>
        <string name="navigation_drawer_open">Open navigation drawer</string>
        <string name="navigation_drawer_close">Close navigation drawer</string>
        <string name="nav_header_title">Android Studio</string>
        <string name="nav_header_subtitle">android.studio@android.com</string>
        <string name="nav_header_desc">Navigation header</string>
        <string name="action_settings">Settings</string>
        <string name="Todo">TODO</string>
        <string name="nav_open_drawer">Open navigation drawer</string>
        <string name="nav_close_drawer">Close navigation drawer</string>
        <string name="change_password">Change Password</string>
        <string name="invite">Invite a friend</string>
        <string name="rate">Rate app</string>
        <string name="patner">Partner with us</string>
        <string name="Privacy">privacy policy</string>
        <string name="logout">logout</string>
        <string name="service">services</string>
        <string name="faq">FAQ</string>
        <string name="chat_with_us">chat with us</string>
        <string name="about_us">about us</string>
        <string name="share">Share</string>
        <string name="login">LOGIN</string>
        <string name="name">Name</string>
        <string name="btnlogin">login</string>
        <string name="signup">SIGNUP</string>
        <string name="fullname">Fullname</string>
        <string name="email_address">Email address</string>
        <string name="enter_phone_number">enter phone number</string>
        <string name="confirm_password">Confirm password</string>
        <string name="username">Username</string>
        <string name="haveaccount">Already have an Account LOGIN</string>
        <string name="hello_there_grab_a_room">HELLO there Grab a Room</string>
        <string name="start_a_business">Start a business</string>
        <string name="todo">TODO</string>
    <string name="profile">profile</string>


</resources>