<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/registertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"

        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register_now"
        android:textSize="30sp"
        android:textStyle="bold"
    />

    <EditText
        android:id="@+id/fulname"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="16dp" />


    <EditText
        android:id="@+id/usernameSignup"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/usernamesign"
        android:inputType="text"
        android:padding="16dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="16dp"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/passwordsign"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:longClickable="false"
        tools:ignore="SpeakableTextPresentCheck" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:onClick="@string/register"
        android:padding="10dp"
        android:text="@string/register" />


    <TextView
        android:id="@+id/haveOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/already_have_one"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</androidx.appcompat.widget.LinearLayoutCompat>