<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".loginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/welcomeback"
        android:textStyle="bold"
        android:textSize="20sp"
         />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:hint="@string/usernamelogin"
        android:inputType="text"
        android:padding="16dp" />

    <EditText
        android:id="@+id/passlogin"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        android:hint="@string/passwordlogin"
        android:inputType="textPassword"
        android:padding="16dp"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:longClickable="false" />



    <TextView
        android:id="@+id/forgotpssd"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:text="@string/forgot_password"

        android:textSize="18sp"
    />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_bg"
        android:onClick="login"
        android:text="@string/loginbutton"
        />

    <TextView
        android:id="@+id/signupaccnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/don_t_have_account_signup"
        android:textSize="24sp"
        android:layout_gravity="center"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</androidx.appcompat.widget.LinearLayoutCompat>